TL/feedback/rendu2/GAUTHIER_JULIEN.out.tests.txt
-- The CXX compiler identification is GNU 12.2.0
-- The C compiler identification is GNU 12.2.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Configuring done
-- Generating done
-- Build files have been written to: /home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/build
[ 25%] Building CXX object CMakeFiles/testfa.dir/Automaton.cc.o
[ 50%] Building CXX object CMakeFiles/testfa.dir/testfa.cc.o
In file included from /home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/gtest.h:60,
                 from /home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1:
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc: In member function ‘virtual void fa::AutomatonTest_testCreateIntersection_DisjointLanguages_Test::TestBody()’:
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1192:43: error: ‘class fa::Automaton’ has no member named ‘finalStates’
 1192 |         EXPECT_TRUE(intersectionAutomaton.finalStates.empty());
      |                                           ^~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/internal/gtest-internal.h:1500:34: note: in definition of macro ‘GTEST_TEST_BOOLEAN_’
 1500 |       ::testing::AssertionResult(expression)) \
      |                                  ^~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/gtest.h:1985:32: note: in expansion of macro ‘GTEST_EXPECT_TRUE’
 1985 | #define EXPECT_TRUE(condition) GTEST_EXPECT_TRUE(condition)
      |                                ^~~~~~~~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1192:9: note: in expansion of macro ‘EXPECT_TRUE’
 1192 |         EXPECT_TRUE(intersectionAutomaton.finalStates.empty());
      |         ^~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1193:43: error: ‘class fa::Automaton’ has no member named ‘transitions’; did you mean ‘addTransition’?
 1193 |         EXPECT_TRUE(intersectionAutomaton.transitions.empty());
      |                                           ^~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/internal/gtest-internal.h:1500:34: note: in definition of macro ‘GTEST_TEST_BOOLEAN_’
 1500 |       ::testing::AssertionResult(expression)) \
      |                                  ^~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/gtest.h:1985:32: note: in expansion of macro ‘GTEST_EXPECT_TRUE’
 1985 | #define EXPECT_TRUE(condition) GTEST_EXPECT_TRUE(condition)
      |                                ^~~~~~~~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1193:9: note: in expansion of macro ‘EXPECT_TRUE’
 1193 |         EXPECT_TRUE(intersectionAutomaton.transitions.empty());
      |         ^~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc: In member function ‘virtual void fa::AutomatonTest_testCreateIntersection_NonDisjointLanguages_Test::TestBody()’:
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1230:43: error: ‘class fa::Automaton’ has no member named ‘initialStates’; did you mean ‘getInitialStates’?
 1230 |         EXPECT_TRUE(intersectionAutomaton.initialStates.size() == 1);
      |                                           ^~~~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/internal/gtest-internal.h:1500:34: note: in definition of macro ‘GTEST_TEST_BOOLEAN_’
 1500 |       ::testing::AssertionResult(expression)) \
      |                                  ^~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/gtest.h:1985:32: note: in expansion of macro ‘GTEST_EXPECT_TRUE’
 1985 | #define EXPECT_TRUE(condition) GTEST_EXPECT_TRUE(condition)
      |                                ^~~~~~~~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1230:9: note: in expansion of macro ‘EXPECT_TRUE’
 1230 |         EXPECT_TRUE(intersectionAutomaton.initialStates.size() == 1);
      |         ^~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1231:43: error: ‘class fa::Automaton’ has no member named ‘finalStates’
 1231 |         EXPECT_TRUE(intersectionAutomaton.finalStates.size() == 1);
      |                                           ^~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/internal/gtest-internal.h:1500:34: note: in definition of macro ‘GTEST_TEST_BOOLEAN_’
 1500 |       ::testing::AssertionResult(expression)) \
      |                                  ^~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/gtest.h:1985:32: note: in expansion of macro ‘GTEST_EXPECT_TRUE’
 1985 | #define EXPECT_TRUE(condition) GTEST_EXPECT_TRUE(condition)
      |                                ^~~~~~~~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1231:9: note: in expansion of macro ‘EXPECT_TRUE’
 1231 |         EXPECT_TRUE(intersectionAutomaton.finalStates.size() == 1);
      |         ^~~~~~~~~~~
make[2]: *** [CMakeFiles/testfa.dir/build.make:90 : CMakeFiles/testfa.dir/testfa.cc.o] Erreur 1
make[1]: *** [CMakeFiles/Makefile2:83 : CMakeFiles/testfa.dir/all] Erreur 2
make: *** [Makefile:91 : all] Erreur 2
